[tool.poetry]
name = "ut2d"
version = "0.3.2"
description = "a command-line utility to convert unitx timestamp into human readable datetime"
authors = ["Binghuan Zhang <574953550@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
requests = "^2.22"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
yapf = "^0.28.0"
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
